// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker edit works 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-picker-input"
      class="date-time-input form-control"
      type="text"
      value="2019-02-22 14:22:00"
    />
    <span
      class="date-time-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;

exports[`DateTimePicker prefils the value from prop 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-picker-input"
      class="date-time-input form-control"
      type="text"
      value="2019-02-21 14:22:00"
    />
    <span
      class="date-time-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;

exports[`DateTimePicker renders properly 1`] = `
<div>
  <span
    class="input-group date-time-picker-pf input-group"
  >
    <input
      aria-label="date-picker-input"
      class="date-time-input form-control"
      type="text"
      value=""
    />
    <span
      class="date-time-picker-pf input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-calendar"
      />
    </span>
    <span
      class="clear-button input-group-addon"
    >
      <span
        aria-hidden="true"
        class="fa fa-close"
      />
    </span>
  </span>
</div>
`;
